[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://laser.wav" type="AudioStream" id=2]
[ext_resource path="res://explosion.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.898039, 0.235294, 1 )
emission_enabled = true
emission = Color( 1, 0.952941, 0.462745, 1 )
emission_energy = 1.86
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CapsuleShape" id=3]
radius = 1.66114
height = 0.002

[node name="Bullet" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
light_energy = 3.06
light_indirect_energy = 5.53
omni_range = 8.5

[node name="LightTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="EnemyExplode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -11.107

[node name="BulletSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 13.981
autoplay = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="LightTimer" to="." method="_on_LightTimer_timeout"]
